# arm-ffa

./: CHANGELOG.md  Cargo.toml  README.md  fuzzer_get_coverage.sh  fuzzer_run_all.sh
fuzz/: .gitignore  Cargo.toml  get_coverage.sh  run_all.sh
fuzz/fuzz_targets/: boot_info.rs  boot_info_v1_1.rs  boot_info_v1_2.rs  interface.rs  interface_v1_1.rs  interface_v1_2.rs  mem_relinquish_desc.rs  mem_transaction_desc.rs  notification_info_get32.rs  notification_info_get64.rs  partition_info.rs  success_args.rs  success_args32.rs  success_args64.rs
src/: boot_info.rs  ffa_v1_1.rs  ffa_v1_2.rs  ffa_v1_3.rs  interface.rs  interface_args.rs  lib.rs  memory_management.rs  notification.rs  partition_info.rs
