# SPDX-FileCopyrightText: Copyright 2023 Arm Limited and/or its affiliates <open-source-office@arm.com>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "arm-ffa"
version = "0.1.0"
authors = [
    "Balint Dobszay <balint.dobszay@arm.com>",
    "Imre Kis <imre.kis@arm.com>",
]
description = "Arm Firmware Framework for Arm A-profile support library"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://git.trustedfirmware.org/rust-spmc/rust-spmc.git"
keywords = ["arm", "aarch64", "spmc", "ff-a", "firmware"]

[dependencies]
num_enum = { version = "0.7", default-features = false }
thiserror = { version = "2.0.3", default-features = false }
uuid = { version = "1.10", default-features = false }
zerocopy = "0.8"
zerocopy-derive = "0.8"
